@@ -10,15 +10,21 @@ my $i = 0;
 get '/pets/:type' => sub {
   $i++;
   my $c = shift->openapi->valid_input or return;
-  return $c->render(openapi => [{type => $c->param('type')}]);
+  $c->render(openapi => [{type => $c->param('type')}]);
   },
   'listPets';
+
+get '/pets' => sub {
+  my $c = shift->openapi->valid_input or return;
+  $c->render(openapi => [$c->req->params->to_hash]);
+  },
+  'list pets';
 
 post '/pets' => sub {
   my $c = shift->openapi->valid_input or return;
   my $res = $c->req->body_params->to_hash;
   $res->{dummy} = true if $c->req->headers->header('x-dummy');
-  return $c->render(openapi => $res);
+  $c->render(openapi => $res);
   },
   'addPet';
 
@@ -57,6 +63,13 @@ is $tx->res->code, 400, 'invalid listPets';
 is $tx->error->{message}, 'Invalid input', 'sync invalid message';
 is $i, 0, 'invalid on client side';
 
+note 'call()';
+$tx = $client->call('list pets', {page => 2});
+is_deeply $tx->res->json, [{page => 2}], 'call(list pets)';
+
+$tx = $client->call('nope');
+is_deeply $tx->error->{message}, 'No such operationId', 'call(nope)';
+
 done_testing;
 
 __DATA__
@@ -74,6 +87,18 @@ __DATA__
       "parameters": [
         { "$ref": "#/parameters/name" }
       ],
+      "get": {
+        "operationId": "list pets",
+        "parameters": [
+          { "in": "query", "name": "page", "type": "integer" }
+        ],
+        "responses": {
+          "200": {
+            "description": "pets",
+            "schema": { "type": "array" }
+          }
+        }
+      },
       "post": {
         "x-whatever": [],
         "operationId": "addPet",
